; ModuleID = '/home/carl/AnghaBench/vlc/modules/video_output/wayland/extr_input.c_pointer_leave_cb.c'
source_filename = "/home/carl/AnghaBench/vlc/modules/video_output/wayland/extr_input.c_pointer_leave_cb.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.wl_pointer = type { i32 }
%struct.wl_surface = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, %struct.wl_pointer*, i32, %struct.wl_surface*)* @pointer_leave_cb to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @pointer_leave_cb(i8* %0, %struct.wl_pointer* %1, i32 %2, %struct.wl_surface* %3) #0 {
  %5 = alloca i8*, align 8
  %6 = alloca %struct.wl_pointer*, align 8
  %7 = alloca i32, align 4
  %8 = alloca %struct.wl_surface*, align 8
  store i8* %0, i8** %5, align 8
  store %struct.wl_pointer* %1, %struct.wl_pointer** %6, align 8
  store i32 %2, i32* %7, align 4
  store %struct.wl_surface* %3, %struct.wl_surface** %8, align 8
  %9 = load i8*, i8** %5, align 8
  %10 = load %struct.wl_pointer*, %struct.wl_pointer** %6, align 8
  %11 = load i32, i32* %7, align 4
  %12 = load %struct.wl_surface*, %struct.wl_surface** %8, align 8
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
